[package]
name = "deet"
version = "0.1.0"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
libc = "0.2.139"
rustyline = "11.0.0"
gimli = { git = "https://github.com/gimli-rs/gimli", rev = "0.27.2", default-features = false, features = ["read"] }
object = { version = "0.30.0", default-features = false, features = ["read"] }
memmap2 = "0.5.10"
addr2line = "0.19.0"
